--- a/exercises_java.ipynb
+++ b/exercises_java.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "# Basic Function Exercises\n",
     "\n",
+    "\n",
     "# Implement a function to convert kilograms to grams.\n",
     "\n",
     "# Implement a function to convert reais to dollars.\n",
@@ -28,17 +29,56 @@
     "\n",
     "# Implement a function to check if a person has a fever, considering that a fever is defined as 37°C or higher.\n",
     "\n",
+    "\n",
     "# Implement a function to check whether someone should go to the park or not.\n",
     "# To go to the park, the temperature must be between 23°C and 30°C (inclusive).\n",
+    "\n",
     "\n",
     "# Implement a function that returns a welcome message based on a student’s name.\n",
     "# Example:\n",
     "# \"Welcome Bruno!\"\n",
     "\n",
+    "\n",
     "# Implement a function that returns a formatted message showing the installment payments of a purchase,\n",
     "# based on the total purchase amount and the number of installments.\n",
     "# Example response:\n",
     "# \"Your purchase of R$1200 in 10 installments of R$120 has been completed.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99226329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Condition\n",
+    "\n",
+    "\n",
+    "# Implement a function to check which is greater between two numbers. The function must return a message in the format:\n",
+    "# \"The number X is greater than Y\"\n",
+    "\n",
+    "\n",
+    "# Implement a function to check which is greater between two numbers. If the numbers are equal, the function must return the message:\n",
+    "# \"The numbers are equal\"\n",
+    "\n",
+    "\n",
+    "# Implement a function to check which is greater among three numbers. The function must return a message in the format:\n",
+    "# \"The number X is greater than Y and Z\"\n",
+    "# If the numbers are equal, the function must return:\n",
+    "# \"The numbers are equal\"\n",
+    "\n",
+    "\n",
+    "# Implement a function that returns a message with the action a pedestrian should take when seeing their traffic light. Possible actions:\n",
+    "# Red → Wait\n",
+    "# Green → Cross\n",
+    "# If the color is different, the function must return an error with the message:\n",
+    "# \"Traffic light malfunction\"\n",
+    "\n",
+    "\n",
+    "# Implement a function that reports the status of a family budget based on total income and expenses.\n",
+    "# If income > expenses → \"You are within budget!\"\n",
+    "# Otherwise → \"You are over budget! Do not spend more!\""
    ]
   }
  ],
